Add support for CSP load balancers

--- a/fleet.yaml
+++ b/fleet.yaml
@@ -27,4 +27,17 @@ diff:
     namespace: default
     kind: Ingress
     operations:
-    - {"op": "remove", "path": "/spec/rules/0/host"}        
+    - {"op": "remove", "path": "/spec/rules/0/host"}   
+
+
+targetCustomizations:
+  - name: cloud-service-providers
+    helm:
+      values:
+        service:
+          type: LoadBalancer
+        ingress:
+          enabled: false
+    clusterSelector:
+      matchLabels:
+        csp: true
