--- a/fleet.yaml
+++ b/fleet.yaml
@@ -14,7 +14,7 @@ helm:
             - path: /
               pathType: ImplementationSpecific
     autoscaling:
-      enabled: false
+      enabled: true
       minReplicas: 4
       maxReplicas: 25
       targetCPUUtilizationPercentage: 80
